sidebar and table

--- a/src/app/layout/hero-page/hero-page.component.html
+++ b/src/app/layout/hero-page/hero-page.component.html
@@ -1,3 +1,5 @@
+
+<app-header></app-header>
 <div class="hero-img-container">
   <img [src]="heroImage" alt="Hero Image" />
   <div class="hero-text">
@@ -5,6 +7,5 @@
     and distribution of our Members’ maritime data products.
   </div>
 </div>
-
 
 
