--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,10 +1,10 @@
-$sidebar-width: 300px;          
+$sidebar-width: 300px;
 $collapsed-sidebar-width: 0;
 $sidebar-bg: #ffffff;
 $primary-color: #2f4050;
 $hover-bg: #e0e0e0;
-$font-color: #333333;
-$icon-size: 18px;
+$font-color: #000000;
+$icon-size: 10px;
 $bg-color: #ffffff;
 $border-color: #d1d5db;
 $text-color: #4b5563;
@@ -17,7 +17,6 @@ $hover-color: #1e40af;
   height: 100vh;
   background: $bg-color;
   box-sizing: border-box;
-  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.15);
 
   .sidebar {
     width: $sidebar-width;
@@ -27,33 +26,31 @@ $hover-color: #1e40af;
     box-sizing: border-box;
     overflow-y: auto;
     height: 100%;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 
     .sidebar-item {
       margin-left: 0;
-      margin-bottom: 5px;
+      margin-bottom: 6px;
 
       .sidebar-header {
         cursor: pointer;
         user-select: none;
-        padding: 8px 12px;
+        padding: 12px;
+        font-size: 16px;
         font-weight: 600;
         color: $primary-color;
         background-color: lighten($primary-color, 50%);
         border-radius: 5px;
         position: relative;
+        display: flex;
+        gap: 6px;
+        align-items: center;
 
         &:hover {
           background-color: $hover-bg;
         }
 
-        .toggle-icon {
-          position: absolute;
-          right: 12px;
-          top: 50%;
-          transform: translateY(-50%);
-          font-size: $icon-size;
-          color: $font-color;
-        }
+
       }
 
       .dropdown {
@@ -67,100 +64,106 @@ $hover-color: #1e40af;
           .dropdown-header {
             cursor: pointer;
             user-select: none;
-            padding: 6px 12px;
+            padding: 12px;
             font-weight: 500;
             color: $text-color;
             background-color: lighten($primary-color, 80%);
             border-radius: 4px;
             position: relative;
+            font-size: 14px;
+            display: flex;
+            gap: 10px;
+            align-items: center;
 
             &:hover {
               background-color: $hover-bg;
             }
 
-            .toggle-icon {
-              position: absolute;
-              right: 12px;
-              top: 50%;
-              transform: translateY(-50%);
-              font-size: $icon-size;
-              color: $font-color;
-            }
+
           }
 
           .drop-down-items {
             margin-left: 15px;
-            margin-top: 5px;
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
 
             .drop-down-item {
               margin-left: 0;
-              margin-bottom: 5px;
 
               .item-header {
                 cursor: pointer;
                 user-select: none;
-                padding: 5px 12px;
+                padding: 12px;
                 font-weight: 400;
                 color: $text-color;
                 background-color: lighten($primary-color, 90%);
                 border-radius: 4px;
                 position: relative;
+                font-size: 13px;
+                display: flex;
+                gap: 6px;
+                align-items: center;
 
                 &:hover {
                   background-color: $hover-bg;
                 }
 
-                .toggle-icon {
-                  position: absolute;
-                  right: 12px;
-                  top: 50%;
-                  transform: translateY(-50%);
-                  font-size: $icon-size;
-                  color: $font-color;
-                }
+
               }
 
               .mini-dropdown {
                 margin-left: 15px;
-                margin-top: 5px;
+                display: flex;
+                flex-direction: column;
+                gap: 6px;
 
                 .mini-item {
                   margin-left: 0;
                   margin-bottom: 5px;
 
-                  .mini-header {
-                    cursor: pointer;
-                    user-select: none;
-                    padding: 4px 12px;
-                    font-weight: 400;
-                    color: $text-color;
-                    background-color: lighten($primary-color, 95%);
-                    border-radius: 4px;
-                    position: relative;
+                  .chart-container {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
 
-                    &:hover {
-                      background-color: $hover-bg;
-                    }
+                    .mini-header {
+                      cursor: pointer;
+                      user-select: none;
+                      padding: 12px;
+                      font-size: 12px;
+                      font-weight: 500;
+                      color: $text-color;
+                      background-color: lighten($primary-color, 95%);
+                      border-radius: 4px;
+                      position: relative;
+                      display: flex;
+                      gap: 6px;
+                      align-items: center;
 
-                    .toggle-icon {
-                      position: absolute;
-                      right: 12px;
-                      top: 50%;
-                      transform: translateY(-50%);
-                      font-size: $icon-size;
-                      color: $font-color;
+                      &:hover {
+                        background-color: $hover-bg;
+                      }
+
+                      input {
+                        align-self: flex-end;
+                        right: 0;
+                      }
                     }
                   }
 
                   .dropdown-properties-sidebar {
-                    margin-left: 20px;
-                    font-style: italic;
-                    color: darken($text-color, 10%);
-                    padding-left: 5px;
+                    display: flex;
+                    margin-left: 35px;
+                    gap: 4px;
 
                     .sidebar-property-key {
-                      padding: 2px 0;
+
                       cursor: default;
+                      font-size: 12px;
+                      display: flex;
+                      flex-direction: column;
+                      gap: 5px;
                     }
                   }
                 }
@@ -172,14 +175,14 @@ $hover-color: #1e40af;
     }
   }
 
-   .selected-chart {
+  .selected-chart {
     width: 400px;
-    height: 500px;
+    height: 400px;
     background: $sidebar-bg;
     border: 1px solid $border-color;
     padding: 20px;
     box-sizing: border-box;
-    position: absolute; 
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -187,13 +190,28 @@ $hover-color: #1e40af;
     border-radius: 10px;
     overflow-y: auto;
     z-index: 1200;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
 
-    h3 {
-      margin-top: 0;
-      color: $primary-color;
-      font-weight: 700;
-      margin-bottom: 15px;
-      text-align: center;
+    .header {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 2px solid rgb(179, 179, 179);
+
+      h3 {
+        color: $primary-color;
+        font-weight: 700;
+        text-align: center;
+      }
+
+      p {
+        cursor: pointer;
+        color: rgb(194, 43, 43);
+      }
     }
 
     .properties-list {
@@ -213,14 +231,7 @@ $hover-color: #1e40af;
             color: $hover-color;
           }
 
-          .toggle-icon {
-            position: absolute;
-            right: 0;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 20px;
-            color: $font-color;
-          }
+
         }
 
         .property-details {
@@ -228,9 +239,56 @@ $hover-color: #1e40af;
           color: $font-color;
           font-size: 14px;
           margin-top: 5px;
-          line-height: 1.3;
+          line-height: 1.5;
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+          width: 100%;
+          max-width: 500px;
+
+          p {
+            display: grid;
+            grid-template-columns: 150px 1fr;
+            width: 100%;
+            margin: 0;
+
+            span {
+              text-align: left;
+              word-break: break-word;
+            }
+          }
         }
+
       }
     }
+  }
+
+  .toggle-icon {
+    padding-right: 4px;
+    font-size: $icon-size;
+    color: $font-color;
+    text-align: center;
+  }
+
+  .fa-earth-asia {
+    color: rgb(58, 110, 179);
+  }
+
+  .fa-layer-group {
+    color: #4682B4;
+  }
+
+  .fa-sheet-plastic {
+    color: #3CB371;
+  }
+
+  .fa-chart-simple {
+    color: #1E90FF;
+  }
+
+  .fa-solid:hover {
+    opacity: 0.85;
+    transform: scale(1.05);
+    transition: all 0.2s ease-in-out;
   }
 }
